# kl-mlops

./: .gitignore  README.md  pyproject.toml
API/: Dockerfile  crud_path.py  crud_pydantic.py  crud_query.py
API_serving/: Dockerfile  app.py  docker-compose.yaml  download_model.py  schemas.py
API_serving/sk_model/: MLmodel  requirements.txt
db/: Dockerfile  README.md  data_generator.py  data_generator_wrong.py  data_generator_wrong_2.py  db.ipynb  db_server  docker-compose.yaml
model/: data.csv  model.ipynb  model_train_pipeline.py  model_valid_pipeline.py  model_validation.py  pipeline.joblib  save_model_to_registry.py  scaler.joblib  test.ipynb  xgb.joblib
model-registry/: Dockerfile  docker-compose.yaml  load_model_from_registry.py  prometheus.yml  save_model_to_registry.py  test.ipynb
model/mlruns/0/: meta.yaml
model/mlruns/971908572237560787/: meta.yaml
model/mlruns/971908572237560787/51e677fd74fb40458608772a8e24998d/: meta.yaml
model/mlruns/971908572237560787/51e677fd74fb40458608772a8e24998d/artifacts/sk_model/: MLmodel  conda.yaml  (+2 more)
model/mlruns/971908572237560787/51e677fd74fb40458608772a8e24998d/metrics/: train_rmse  valid_rmse
model/mlruns/971908572237560787/51e677fd74fb40458608772a8e24998d/tags/: mlflow.log-model.history
model/mlruns/971908572237560787/baafa49153324e309c9c694517278781/: meta.yaml
model/mlruns/971908572237560787/baafa49153324e309c9c694517278781/metrics/: train_rmse  valid_rmse
model/mlruns/971908572237560787/baafa49153324e309c9c694517278781/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
(+2 files in other folders)
