[tool.poetry]
name = "kblife-mlops"
version = "0.1.0"
description = ""
authors = ["BK <sdsf1225@gmail.com>"]
readme = "README.md"
packages = [{include = "kblife_mlops"}]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.4.1"
uvicorn = "^0.22.0"
pandas = "^2.0.3"
psycopg2-binary = "^2.9.6"
scikit-learn = "^1.3.0"
fastapi = "^0.99.1"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
